lang/derive/tests/ui/fail/06-invalid-inout-type.rs
use liquid_lang as liquid;

use liquid::InOut;
#[derive(InOut)]
pub struct MyInOut {
    b: bool,
    i: f32,
}

fn main() {}